--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -1057,8 +1057,14 @@ The next step is to define one mapping for each \emph{specific constraint} (\emp
 \section{How to Provide Constraint Validation Out-Of-The-Box}
 \label{sec:validation}
 
+SPARQL is generally seen as the method of choice to validate RDF data according to certain constraints, although it is not ideal for their formulation. 
+In contrast, OWL 2, DSP, ReSh, and ShEx constraints are comparatively easy to understand. 
+Bosch and Eckert \cite{BoschEckert2014-2} use SPIN as basis to define a
+validation environment in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL
+(the implementation can be tested at \url{http://purl.org/net/rdfval-demo}).
+The SPIN engine checks for each resource if it satisfies all constraints (associated with its assigned classes) and generates a result RDF graph containing information about all constraint violations.
 We are able to offer the validation of all \emph{specific constraints} (expressed by any constraint language) by defining mappings from each \emph{specific constraint} to SPIN, 
-what we have done for all OWL 2 and DSP constructs and for some constructs of other constraint languages (see section \ref{sec:implementation}).
+what we have done for all OWL 2\footnote{OWL to SPIN: \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}} and DSP\footnote{DSP to SPIN: \url{https://github.com/dcmi/DSP-SPIN-Mapping}} constructs and for some constructs of other constraint languages.
 %We do not have to define a mapping to SPIN for each specific constraint. 
 %when we define a mapping to SPIN for each generic constraint.
 We do not have to map each \emph{specific constraint} to SPIN and we get identical validation results for semantically equivalent \emph{specific constraints},
@@ -1067,6 +1073,12 @@ We do not have to map each \emph{specific constraint} to SPIN and we get identic
 As a consequence, we only have to define one SPIN mapping for each constraint type corresponding to a requirement within the RDF validation requirements database.
 19 of 74 RDF constraint types can be expressed by at least four constraint languages \cite{BoschNolleAcarEckert2015}.
 This means that there must be 76 (four for each constraint type) implementations to validate 76 \emph{specific constraints} - instead of only 19 implementations (one for each \emph{generic constraint}).
+
+%The validation implementation of constraint languages is fully declarative,
+%consisting of a mapping from constraint languages to SPIN in form of SPARQL CONSTRUCT queries.
+%SPIN represents both the SPIN mappings and the SPARQL queries in RDF. 
+%Within the validation environment, we fully implemented the validation of all OWL 2 DL and DSP constructs 
+%(for the complete DSP validation see \cite{BoschEckert2014-2}). 
 
 Within our validation environment, we define one SPIN construct template for each \emph{generic constraint}\footnote{For details about the validation environment see \cite{BoschEckert2014-2}}.
 A SPIN construct template contains a SPARQL CONSTRUCT query which generates constraint violation triples (\emph{spin:ConstraintViolation}) indicating the subject (\emph{spin:violationRoot}) and the properties (\emph{spin:violationPath}), causing constraint violations, and the reason why constraint violations have been raised (\emph{rdfs:label}).
@@ -1088,32 +1100,19 @@ WHERE {
     FILTER NOT EXISTS { ?o a ?c1 } . }
 \end{ex}
 
-%\subsection{Not Allowed Values}
-
-\section{Implementation}
-\label{sec:implementation}
-
-SPARQL is generally seen as the method of choice to validate RDF data according to certain constraints, although it is not ideal for their formulation. 
-In contrast, OWL 2 and DSP constraints are comparatively easy to understand, but lack an implementation to validate RDF data. 
-Bosch and Eckert\cite{BoschEckert2014-2} use SPIN as basis to define a
-validation environment in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL. 
-The validation implementation of constraint languages is fully declarative,
-consisting of a mapping from constraint languages to SPIN in form of SPARQL CONSTRUCT queries.
-SPIN represents both the SPIN mappings and the SPARQL queries in RDF. 
-Within the validation environment, we fully implemented the validation of all OWL 2 DL\footnote{OWL to SPIN: \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}} and DSP\footnote{DSP to SPIN: \url{https://github.com/dcmi/DSP-SPIN-Mapping}} constructs (for the complete DSP validation see \cite{BoschEckert2014-2}). 
-The implementation can be tested at \url{http://purl.org/net/rdfval-demo}.
-The SPIN engine checks for each resource if it satisfies all constraints (associated with its assigned classes) and generates a result RDF graph containing information about all constraint violations.
-
-We provide a mapping from RDF-CO to SPIN\footnote{RDF-CV to SPIN: \url{https://github.com/boschthomas/RDF-CV-2-SPIN}} in order to automatically validate each type of generic constraint (simple, complex, property, and class constraints).
+We provide a mapping from the \emph{RDF-CV} to SPIN\footnote{RDF-CV to SPIN: \url{https://github.com/boschthomas/RDF-CV-2-SPIN}} in order to automatically validate each type of \emph{generic constraint} (\emph{simple}, \emph{complex}, \emph{property}, and \emph{class constraints}).
 Part of future work will be 
-(1) to provide a GUI which generates generic constraints automatically according to inputs of domain experts who are not familiar with the formulation of constraints; 
-(2) to offer bidirectional transformations between specific constraints (expressed by multiple constraint languages) and generic constraints;
-(3) to provide translations between specific constraints (expressed by any specific constraint language) by using generic constraints as an intermediate transformation step.
+(1) to provide a GUI which generates \emph{generic constraints} automatically according to inputs of domain experts who are not familiar with the formulation of constraints,
+(2) to offer bidirectional transformations between \emph{specific constraints} (expressed by multiple constraint languages) and \emph{generic constraints}, and
+(3) to provide translations between semantically equivalent \emph{specific constraints} (expressed by any constraint language) by using \emph{generic constraints} as an intermediate transformation step.
 %\begin{itemize}
 	%\item to provide a GUI which generates generic constraints automatically according to inputs of domain experts who are not familiar with the formulation of constraints.
 	%\item to offer bidirectional transformations between specific constraints (expressed by multiple constraint languages) and generic constraints. 
 	%\item to provide translations between specific constraints (expressed by any specific constraint language) by using generic constraints as an intermediate transformation step.
 %\end{itemize}
+
+%\subsection{Not Allowed Values}
+
 \section{Evaluation}
 \label{sec:evaluation}
 
